# Document-to-knowledge-system

./: .dockerignore  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: jules-task.md
.github/workflows/: ci.yml
doc2knowledge/: main.py  requirements.txt  utils.py  vector_store.py
docs/superpowers/plans/: 2026-07-11-document-to-knowledge-modernization.md
docs/superpowers/specs/: 2026-07-11-document-to-knowledge-modernization-design.md
eval/: questions.example.json
scripts/: ci_debug.sh  evaluate_retrieval.py
src/doc2knowledge/: __init__.py  __main__.py  api.py  config.py  domain.py  evaluation.py  observability.py
src/doc2knowledge/embeddings/: __init__.py  base.py  mixedbread.py
src/doc2knowledge/generation/: __init__.py  base.py  gemma.py  prompt.py
src/doc2knowledge/ingestion/: chunking.py  extractors.py  service.py
src/doc2knowledge/retrieval/: __init__.py  service.py
src/doc2knowledge/routes/: documents.py  query.py  search.py
src/doc2knowledge/storage/: metadata.py  vectors.py
tests/: fakes.py  test_cli.py  test_config.py  test_evaluation.py  test_health.py  test_processing.py  test_readiness.py  test_request_ids.py
tests/api/: test_documents.py  test_query.py  test_search.py
tests/embeddings/: test_mixedbread.py
tests/generation/: test_gemma.py  test_prompt.py
tests/ingestion/: test_chunking.py  test_concurrent_duplicate.py  test_extractors.py  test_indexing_failure.py
tests/retrieval/: test_service.py
tests/storage/: test_metadata.py  test_vectors.py
